2007-05-16  Ankit Jain  <jankit@novell.com>

	* AutotoolsContext.cs (EscapeAndUpperConfigName): New.
	(EscapeStringForAutoconf): Escape ' ' also.
	* SolutionMakefileHandler.cs: Use EscapeAndUpperConfigName when emitting
	config name.
	* SimpleProjectMakefileHandler.cs: Likewise.
	* SolutionDeployer.cs: Likewise.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.mdp: Don't copy project references.
	* Makefile.am: Updated.

2007-05-10  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* MonoDevelop.Autotools.mdp: Add MonoDevelop.Autotools.addin.xml
	  back to the file list, but exclude from makefile synching.

2007-05-09  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* MonoDevelop.Autotools/Makefile.am: Eliminate duplication of 
	MonoDevelop.Autotools.addin.xml target.
	Fix dependencies for DATA_FILE_BUILD.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.addin.xml: Added missing dependency.
	* MonoDevelop.Autotools.mdp, Makefile.am: Updated assembly references.
	* MakefileData.cs: Use top_srcdir to reference files not generated at
	  build time.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Updated.
	* Mono.Addins/ExtensionContext.cs: Fixed GetExtensionObjects overload
	  which was not using the correct reuseCachedInstance value.
	* Mono.Addins/ExtensionTree.cs: Improved error message. When looking
	  for a type in an assembly, avoid throwing an exception too early,
	  since it may be found in other assemblies.
	* Mono.Addins.Database/AddinDatabase.cs: In the addin info cache, also
	  store information about unsuccessful lookups, to avoid looking for
	  an add-in again if we found that it doesn't exist. In Update(),
	  don't use verbose output by default.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Autotools.addin.xml, MonoDevelop.Autotools.mdp,
	  SimpleProjectMakefileHandler.cs, gtk-gui/objects.xml, Makefile.am:
	  Migration to Mono.Addins.
